code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__browser_session_skips_foreign_background_events.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |                                     ECC                                    |
 +----------------------------------------------------------------------------+
   - Running commands


 › Keep browsing while checking status

 » Command guard: Leading cd /tmp/work is redundant

   +- Browser (headless): example.com
   |
   |   Actions
   |    MM:SS  Opened  https://example.com
   |
   |   Console: Encountering captcha challenge on checkout
   |
   +- [Ctrl+B] View · [Esc] Stop

 +----------------------------- ✶ Browsing... -----------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
